top section done

--- a/index.html
+++ b/index.html
@@ -15,15 +15,52 @@
     <!-- Tailwind CSS Latest CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
 
+    <!-- custom css -->
+     <link rel="stylesheet" href="./assets/css/style.css">
+
 </head>
 
 <body>
 
     <!-- top content -->
-    <section class="top-box">
-        <h1 class="font-bold text-[32px]">
-            Job Application Tracker
-        </h1>
+    <section class="top-box mt-[60px] ">
+        <div class="container mx-4 xl:mx-auto mb-[30px] pb-[30px] border-b border-[#e6e7e9]">
+            <h1 class="font-bold text-[32px] mb-5">
+                Job Application Tracker
+            </h1>
+            <div class="grid grid-cols-12 gap-4">
+                <div class="col-span-4">
+                    <div class="box border border-[var(--stroke)] rounded-lg p-5 bg-white">
+                        <span class="text-[#323B49] font-medium text-sm mb-2">
+                            Total
+                        </span>
+                        <h4 class="text-[#002C5C] font-bold text-2xl">
+                            8
+                        </h4>
+                    </div>
+                </div>
+                <div class="col-span-4">
+                    <div class="box border border-[var(--stroke)] rounded-lg p-5 bg-white">
+                        <span class="text-[#323B49] font-medium text-sm mb-2">
+                            Total
+                        </span>
+                        <h4 class="text-[#10B981] font-bold text-2xl">
+                            0
+                        </h4>
+                    </div>
+                </div>
+                <div class="col-span-4">
+                    <div class="box border border-[var(--stroke)] rounded-lg p-5 bg-white">
+                        <span class="text-[#323B49] font-medium text-sm mb-2">
+                            Total
+                        </span>
+                        <h4 class="text-[#EF4444] font-bold text-2xl">
+                            0
+                        </h4>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
 
 
